--- a/duhoc/tientong/css/flexslider.css
+++ b/duhoc/tientong/css/flexslider.css
@@ -14,8 +14,8 @@
  * ====================================================================================================================*/
 @font-face {
   font-family: 'flexslider-icon';
-  src: url('fonts/flexslider-icon.eot');
-  src: url('fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'), url('fonts/flexslider-icon.woff') format('woff'), url('fonts/flexslider-icon.ttf') format('truetype'), url('fonts/flexslider-icon.svg#flexslider-icon') format('svg');
+  src: url('../fontsflexslider-icon.eot');
+  src: url('../fontsflexslider-icon.eot?#iefix') format('embedded-opentype'), url('../fontsflexslider-icon.woff') format('woff'), url('../fontsflexslider-icon.ttf') format('truetype'), url('../fontsflexslider-icon.svg#flexslider-icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
