--- a/duhoc/tientong/css/widget.css
+++ b/duhoc/tientong/css/widget.css
@@ -326,7 +326,7 @@
   top: 0px;
   width: 11px;
   height: 7px;
-  background:url(assets/images/author-arrow.gif) no-repeat 0 0;
+  background:url(../images/author-arrow.gif) no-repeat 0 0;
   margin: 0px 0 0 -2px;
 }
 .cs-author h6{
