--- a/hospital/hospital01/css/camera.css
+++ b/hospital/hospital01/css/camera.css
@@ -96,7 +96,7 @@
 	z-index: 2;
 }
 .camera_target_content .camera_link {
-    background: url(../images/camera/blank.gif);
+    background: url(../images/blank.gif);
 	display: block;
 	height: 100%;
 	text-decoration: none;
@@ -104,8 +104,8 @@
 	z-index:2;
 }
 .camera_loader {
-    background: #fff url(../images/camera/camera-loader.gif) no-repeat center;
-	background: rgba(255, 255, 255, 0.9) url(../images/camera/camera-loader.gif) no-repeat center;
+    background: #fff url(../images/camera-loader.gif) no-repeat center;
+	background: rgba(255, 255, 255, 0.9) url(../images/camera-loader.gif) no-repeat center;
 	border: 1px solid #ffffff;
 	-webkit-border-radius: 18px;
 	-moz-border-radius: 18px;
@@ -174,7 +174,7 @@
 	z-index: 10;
 }
 .camera_prevThumbs div {
-	background: url(../images/camera/camera_skins.png) no-repeat -160px 0;
+	background: url(../images/camera_skins.png) no-repeat -160px 0;
 	display: block;
 	height: 40px;
 	margin-top: -20px;
@@ -193,7 +193,7 @@
 	z-index: 10;
 }
 .camera_nextThumbs div {
-	background: url(../images/camera/camera_skins.png) no-repeat -190px 0;
+	background: url(../images/camera_skins.png) no-repeat -190px 0;
 	display: block;
 	height: 40px;
 	margin-top: -20px;
@@ -317,12 +317,12 @@
 	right: 41px;
 }
 .camera_commands > .camera_play {
-	background: url(../images/camera/camera_skins.png) no-repeat -80px 0;
+	background: url(../images/camera_skins.png) no-repeat -80px 0;
 	height: 40px;
 	width: 40px;
 }
 .camera_commands > .camera_stop {
-	background: url(../images/camera/camera_skins.png) no-repeat -120px 0;
+	background: url(../images/camera_skins.png) no-repeat -120px 0;
 	display: block;
 	height: 40px;
 	width: 40px;
@@ -401,34 +401,34 @@
 *
 **************************/
 .pattern_1 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay1.png) repeat;
+	background: url(../images/overlay1.png) repeat;
 }
 .pattern_2 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay2.png) repeat;
+	background: url(../images/overlay2.png) repeat;
 }
 .pattern_3 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay3.png) repeat;
+	background: url(../images/overlay3.png) repeat;
 }
 .pattern_4 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay4.png) repeat;
+	background: url(../images/overlay4.png) repeat;
 }
 .pattern_5 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay5.png) repeat;
+	background: url(../images/overlay5.png) repeat;
 }
 .pattern_6 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay6.png) repeat;
+	background: url(../images/overlay6.png) repeat;
 }
 .pattern_7 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay7.png) repeat;
+	background: url(../images/overlay7.png) repeat;
 }
 .pattern_8 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay8.png) repeat;
+	background: url(../images/overlay8.png) repeat;
 }
 .pattern_9 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay9.png) repeat;
+	background: url(../images/overlay9.png) repeat;
 }
 .pattern_10 .camera_overlayer {
-	background: url(../images/camera/patterns/overlay10.png) repeat;
+	background: url(../images/overlay10.png) repeat;
 }
 .camera_caption {
 	
